--- a/servicos/area_do_cliente/dashboard.html
+++ b/servicos/area_do_cliente/dashboard.html
@@ -153,12 +153,15 @@
             </div>
 
             <div class="card">
-                <i class="fab fa-whatsapp"></i>
-                <h3>Suporte Direto</h3>
-                <p style="font-size: 0.9rem;">Fale com seu contador agora pelo WhatsApp.</p>
-                <button class="btn-action" style="background: #25d366;">Iniciar Chat</button>
-            </div>
-        </div>
+    <i class="fab fa-whatsapp"></i>
+    <h3>Suporte Direto</h3>
+    <p style="font-size: 0.9rem;">Fale com seu contador agora pelo WhatsApp.</p>
+    <button class="btn-action" 
+            style="background: #25d366;" 
+            onclick="abrirWhatsapp()">
+        Iniciar Chat
+    </button>
+</div>
     </main>
 
     <script src="https://cdn.jsdelivr.net/npm/@supabase/supabase-js@2"></script>
