--- a/servicos/area_do_cliente/dashboard.html
+++ b/servicos/area_do_cliente/dashboard.html
@@ -115,6 +115,32 @@
             align-items: center;
             gap: 10px;
         }
+        /* Estilo para o Modal de Finalização */
+.modal-checkout {
+    background: var(--dark-blue);
+    border: 2px solid var(--gold);
+    padding: 30px;
+    border-radius: 15px;
+    max-width: 400px;
+    width: 90%;
+    box-shadow: 0 0 30px rgba(189, 150, 23, 0.3);
+}
+
+.modal-input {
+    width: 100%;
+    padding: 12px;
+    margin-bottom: 12px;
+    border-radius: 8px;
+    border: 1px solid rgba(255,255,255,0.1);
+    background: rgba(0,0,0,0.2);
+    color: white;
+    font-family: 'Montserrat', sans-serif;
+}
+
+.modal-input:focus {
+    border-color: var(--gold);
+    outline: none;
+}
     </style>
 </head>
 <body>
