--- a/servicos/pessoa-fisica/index.html
+++ b/servicos/pessoa-fisica/index.html
@@ -87,7 +87,7 @@
 
       <div class="services-grid">
 
-       <a href="../area_do_cliente/index.html?servico=irpf" 
+       <a href="area_do_cliente/index.html?servico=irpf" 
    class="service-card" 
    style="text-decoration: none; background: #0e2a47; border: 1px solid #bd9617; padding: 40px 20px; border-radius: 12px; text-align: center; transition: 0.3s; display: block;"
    onmouseover="this.style.transform='translateY(-5px)'; this.style.boxShadow='0 10px 20px rgba(0,0,0,0.4)';"
@@ -99,7 +99,7 @@
 
 </a>
 
-        <a href="../area_do_cliente/index.html?servico=regularizacao-cpf" 
+        <a href="area_do_cliente/index.html?servico=regularizacao-cpf" 
    class="service-card" 
    style="text-decoration: none; background: #0e2a47; border: 1px solid #bd9617; padding: 40px 20px; border-radius: 12px; text-align: center; transition: 0.3s; display: block;"
    onmouseover="this.style.transform='translateY(-5px)'; this.style.boxShadow='0 10px 20px rgba(0,0,0,0.4)';"
@@ -111,7 +111,7 @@
 
 </a>
 
-        <a href="../area_do_cliente/index.html?servico=orientacao-fiscal-pf" 
+        <a href="area_do_cliente/index.html?servico=orientacao-fiscal-pf" 
    class="service-card" 
    style="text-decoration: none; background: #0e2a47; border: 1px solid #bd9617; padding: 40px 20px; border-radius: 12px; text-align: center; transition: 0.3s; display: block;"
    onmouseover="this.style.transform='translateY(-5px)'; this.style.boxShadow='0 10px 20px rgba(0,0,0,0.4)';"
