--- a/servicos/contabeis/index.html
+++ b/servicos/contabeis/index.html
@@ -50,7 +50,7 @@
       <h2>Especialidades</h2>
       <div class="services-grid">
         
-       <a href="../area_do_cliente/index.html?servico=consultoria-contabil" 
+       <a href="area_do_cliente/index.html?servico=consultoria-contabil" 
    class="service-card" 
    style="text-decoration: none; background: #0e2a47; border: 1px solid #bd9617; padding: 40px 20px; border-radius: 12px; text-align: center; transition: 0.3s; display: block;"
    onmouseover="this.style.transform='translateY(-5px)'; this.style.boxShadow='0 10px 20px rgba(0,0,0,0.4)';"
@@ -62,7 +62,7 @@
 
 </a>
 
-        <a href="../area_do_cliente/index.html?servico=planejamento-tributario" 
+        <a href="area_do_cliente/index.html?servico=planejamento-tributario" 
    class="service-card" 
    style="text-decoration: none; background: #0e2a47; border: 1px solid #bd9617; padding: 40px 20px; border-radius: 12px; text-align: center; transition: 0.3s; display: block;"
    onmouseover="this.style.transform='translateY(-5px)'; this.style.boxShadow='0 10px 20px rgba(189,150,23,0.2)';"
@@ -74,7 +74,7 @@
 
 </a>
 
-        <a href="../area_do_cliente/index.html?servico=balanco-patrimonial" 
+        <a href="area_do_cliente/index.html?servico=balanco-patrimonial" 
    class="service-card" 
    style="text-decoration: none; background: #0e2a47; border: 1px solid #bd9617; padding: 40px 20px; border-radius: 12px; text-align: center; transition: 0.3s; display: block;"
    onmouseover="this.style.transform='translateY(-5px)'; this.style.boxShadow='0 10px 20px rgba(0,0,0,0.4)';"
@@ -86,7 +86,7 @@
 
 </a>
 
-        <a href="../area_do_cliente/index.html?servico=regularizacao-empresa" 
+        <a href="area_do_cliente/index.html?servico=regularizacao-empresa" 
    class="service-card" 
    style="text-decoration: none; background: #0e2a47; border: 1px solid #bd9617; padding: 40px 20px; border-radius: 12px; text-align: center; transition: 0.3s; display: block;"
    onmouseover="this.style.transform='translateY(-5px)'; this.style.boxShadow='0 10px 20px rgba(0,0,0,0.4)';"
@@ -98,7 +98,7 @@
 
 </a>
 
-        <a href="../area_do_cliente/index.html?servico=encerramento-empresa" 
+        <a href="area_do_cliente/index.html?servico=encerramento-empresa" 
    class="service-card" 
    style="text-decoration: none; background: #0e2a47; border: 1px solid #bd9617; padding: 40px 20px; border-radius: 12px; text-align: center; transition: 0.3s; display: block;"
    onmouseover="this.style.transform='translateY(-5px)'; this.style.boxShadow='0 10px 20px rgba(0,0,0,0.4)';"
