--- a/servicos/index.html
+++ b/servicos/index.html
@@ -156,7 +156,7 @@
            onmouseout="this.style.background='#25D366'; this.style.transform='scale(1)';" >
            Contratar Plano Premium
         </a>
-    </div> </div> ```
+    </div> </div>
   </section>
 
   <section style="margin-bottom: 60px;">
