--- a/servicos/certidoes-regularizacoes/index.html
+++ b/servicos/certidoes-regularizacoes/index.html
@@ -46,7 +46,7 @@
     </header>
 
    <div style="display: grid; grid-template-columns: repeat(auto-fit, minmax(280px, 1fr)); gap: 25px;">
-    <a href="area_do_cliente/index.html?servico=cnd" 
+    <a href="../area_do_cliente/index.html?servico=cnd" 
        style="text-decoration: none; background: #0e2a47; border: 1px solid #bd9617; padding: 40px 20px; border-radius: 12px; text-align: center; transition: 0.3s; display: block;"
        onmouseover="this.style.transform='translateY(-5px)'; this.style.boxShadow='0 10px 20px rgba(0,0,0,0.3)';"
        onmouseout="this.style.transform='translateY(0)'; this.style.boxShadow='none';">
@@ -57,7 +57,7 @@
     </a>
 </div>
 
-        <a href="area_do_cliente/index.html?servico=reg-cadastral" 
+        <a href="../area_do_cliente/index.html?servico=reg-cadastral" 
    style="text-decoration: none; background: #0e2a47; border: 1px solid #bd9617; padding: 40px 20px; border-radius: 12px; text-align: center; transition: 0.3s; display: block;"
    onmouseover="this.style.transform='translateY(-5px)'; this.style.borderColor='#bd9617';"
    onmouseout="this.style.transform='translateY(0)'; this.style.borderColor='rgba(189,150,23,0.3)';" >
@@ -68,7 +68,7 @@
 
 </a>
 
-       <a href="area_do_cliente/index.html?servico=cert-estadual" 
+       <a href="../area_do_cliente/index.html?servico=cert-estadual" 
    style="text-decoration: none; background: #0e2a47; border: 1px solid #bd9617; padding: 40px 20px; border-radius: 12px; text-align: center; transition: 0.3s; display: block;"
    onmouseover="this.style.transform='translateY(-5px)'; this.style.boxShadow='0 10px 20px rgba(0,0,0,0.4)';"
    onmouseout="this.style.transform='translateY(0)'; this.style.boxShadow='none';">
