--- a/servicos/certificado-digital/index.html
+++ b/servicos/certificado-digital/index.html
@@ -50,7 +50,7 @@
       <h2>Tipos de Certificado</h2>
       <div class="services-grid">
         
-        <a href="area_do_cliente/index.html?servico=certificado-a1" 
+        <a href="../area_do_cliente/index.html?servico=certificado-a1" 
    class="service-card" 
    style="text-decoration: none; background: #0e2a47; border: 1px solid #bd9617; padding: 40px 20px; border-radius: 12px; text-align: center; transition: 0.3s; display: block;"
    onmouseover="this.style.transform='translateY(-5px)'; this.style.boxShadow='0 10px 20px rgba(0,0,0,0.4)';"
@@ -62,7 +62,7 @@
 
 </a>
 
-       <a href="area_do_cliente/index.html?servico=certificado-a3" 
+       <a href="../area_do_cliente/index.html?servico=certificado-a3" 
    class="service-card" 
    style="text-decoration: none; background: #0e2a47; border: 1px solid #bd9617; padding: 40px 20px; border-radius: 12px; text-align: center; transition: 0.3s; display: block;"
    onmouseover="this.style.transform='translateY(-5px)'; this.style.boxShadow='0 10px 20px rgba(0,0,0,0.4)';"
@@ -74,7 +74,7 @@
 
 </a>
 
-        <a href="area_do_cliente/index.html?servico=renovacao-certificado" 
+        <a href="../area_do_cliente/index.html?servico=renovacao-certificado" 
    class="service-card" 
    style="text-decoration: none; background: #0e2a47; border: 1px solid #bd9617; padding: 40px 20px; border-radius: 12px; text-align: center; transition: 0.3s; display: block;"
    onmouseover="this.style.transform='translateY(-5px)'; this.style.boxShadow='0 10px 20px rgba(0,0,0,0.4)';"
