--- a/servicos/area_do_cliente/index.html
+++ b/servicos/area_do_cliente/index.html
@@ -157,11 +157,10 @@
     </a>
 </div>
 
-<script src="https://cdn.jsdelivr.net/npm/@supabase/supabase-js@2"></script>
+<<script src="https://cdn.jsdelivr.net/npm/@supabase/supabase-js@2"></script>
 <script src="cliente.js"></script>
 
 <script>
-    // Mantendo a inteligência de levar o serviço para a página de cadastro
     document.addEventListener('DOMContentLoaded', () => {
         const urlParams = new URLSearchParams(window.location.search);
         const servico = urlParams.get('servico');
@@ -172,7 +171,5 @@
         }
     });
 </script>
-<script src="https://cdn.jsdelivr.net/npm/@supabase/supabase-js@2"></script>
-    <script src="cliente.js"></script>
 </body>
 </html>
