--- a/servicos/area_do_cliente/dashboard.html
+++ b/servicos/area_do_cliente/dashboard.html
@@ -260,8 +260,9 @@ async function verificarAcesso() {
     
     const statusBadge = document.getElementById('sub-status');
     const statusReal = (assinatura && assinatura.status) ? assinatura.status : "Sem Assinatura";
-    statusBadge.innerText = statusReal;
-    statusBadge.style.background = statusReal.toLowerCase() === 'ativo' ? '#25d366' : '#ff4444';
+   // Localize essa parte no seu código e substitua:
+statusBadge.style.background = statusReal.toLowerCase() === 'ativo' ? '#25d366' : (statusReal.toLowerCase() === 'pendente' ? '#f1c40f' : '#ff4444');
+statusBadge.style.color = statusReal.toLowerCase() === 'pendente' ? 'black' : 'white';
     
     document.getElementById('sub-details').innerText = nomesServicos[assinatura?.plano_id] || "Nenhum plano ativo";
 
@@ -318,11 +319,11 @@ function iniciarFluxoContratacao(user, idServico, profile) {
 
         // 2. Registra a intenção de assinatura (Status Pendente)
         // Importante: Verifique se o nome da tabela no Supabase é 'Assinaturas' com 'A' maiúsculo
-        await dashClient.from('Assinaturas').insert({ 
+        await dashClient.from('assinaturas').insert({ 
             cliente_id: user.id, 
             plano_id: idServico, 
             status: 'Pendente' 
-        });
+             });
 
         // 3. Monta a mensagem e abre o WhatsApp
         const msg = `Olá! Acabei de solicitar o serviço *${nomeServico}* pelo site.\n\nNome: ${n}\nCPF/CNPJ: ${c}\nWhatsApp: ${t}`;
@@ -341,7 +342,7 @@ function iniciarFluxoContratacao(user, idServico, profile) {
 };
 
 // Executa ao carregar
-verificarAcesso();
-    </script>
+verificarAcesso(); 
+       </script>
 </body>
 </html>
