--- a/servicos/area_do_cliente/admin.html
+++ b/servicos/area_do_cliente/admin.html
@@ -72,7 +72,7 @@
 
 <script>
     const SB_URL = 'https://qdgsmnfhpbkbovptwwjp.supabase.co';
-    const SB_KEY = 'SUA_SERVICE_ROLE_KEY_AQUI'; 
+    const SB_KEY = 'eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpc3MiOiJzdXBhYmFzZSIsInJlZiI6InFkZ3NtbmZocGJrYm92cHR3d2pwIiwicm9sZSI6InNlcnZpY2Vfcm9sZSIsImlhdCI6MTc2ODE1NDUzNiwiZXhwIjoyMDgzNzMwNTM2fQ.W5iFRYrGVhgc9ySXdBgl00A1K1lHyjAz5ZTIP7C4ZrA'; 
     const adminClient = supabase.createClient(SB_URL, SB_KEY);
 
     // 1. Carregar Pedidos
