--- a/index.html
+++ b/index.html
@@ -22,26 +22,27 @@
       </div>
     </div>
 
-    <div class="client-access-row">
-      <a href="servicos/area_do_cliente/index.html" class="btn-area-cliente">
-        <i class="fas fa-user-circle"></i> Login
-      </a>
-    </div>
+    <nav class="navbar">
+        <button class="menu-toggle" id="mobile-menu" aria-label="Abrir menu">
+            <i class="fas fa-bars"></i>
+        </button>
 
-    <nav class="main-nav">
-      <ul class="menu">
-        <li class="menu-item"><a href="index.html">Início</a></li>
-        <li class="menu-item dropdown">
-          <a href="servicos/index.html" class="dropdown-toggle">Serviços</a>
-          </li>
-        <li class="menu-item"><a href="blog/index.html">Blog</a></li>
-        <li class="menu-item"><a href="sobre/index.html">Sobre</a></li>
-        <li class="menu-item"><a href="lgpd/index.html">LGPD</a></li>
-      </ul>
+        <ul class="nav-links" id="nav-list">
+            <li><a href="index.html">Início</a></li>
+            <li><a href="servicos/index.html">Serviços</a></li>
+            <li><a href="blog/index.html">Blog</a></li>
+            <li><a href="sobre/index.html">Sobre</a></li>
+            <li><a href="lgpd/index.html">LGPD</a></li>
+            <li>
+              <a href="servicos/area_do_cliente/index.html" class="btn-area-cliente">
+                <i class="fas fa-user-circle"></i> Login
+              </a>
+            </li>
+        </ul>
     </nav>
-
   </div>
 </header>
+
 
 <main class="container">
 
