--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <div class="brand-identity">
       <img src="logo.png" alt="JL Serviços" class="site-logo-circle">
       <div class="brand-text">
-        <h1 class="site-title-header">J L <br> Serviços <br> Contábeis</h1>
+        <h1 class="site-title-header">J L Serviços Contábeis</h1>
         <p class="site-subtitle-header">Atendimento Online para todo o Brasil</p>
       </div>
     </div>
