--- a/servicos/index.html
+++ b/servicos/index.html
@@ -150,7 +150,7 @@
             <li>✔ Suporte Prioritário</li>
             <li>✔ 20% desconto em serviços avulsos</li>
         </ul>
-        <a href="../area_do_cliente/index.html?servico=mei-plano-premium" 
+        <a href="area_do_cliente/index.html?servico=mei-plano-premium" 
            style="margin-top: auto; background: #25D366; color: #fff; text-decoration: none; padding: 15px; border-radius: 8px; font-weight: 700; text-align: center; text-transform: uppercase; transition: 0.3s;"
            onmouseover="this.style.background='#1da851'; this.style.transform='scale(1.02)';" 
            onmouseout="this.style.background='#25D366'; this.style.transform='scale(1)';" >
